# mpv-presence

./: Cargo.toml  README.md  demo.png~
libmpv-sys/: Cargo.toml  build.rs
src/: lib.rs
