[package]
name = "mpv_presence"
version = "1.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libmpv-sys = { path = "libmpv-sys" }
discord-rich-presence = "*"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
